[package]
name = "valheim_manager"
version = "0.1.0"
authors = ["awesomearvinder <ArvinderDhan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
directories-next = "2.0"
toml = "0.5"
tokio = {version = "1.3.0", features = ["rt-multi-thread", "process"]}
serde = {version = "1.0", features = ["derive"]}

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
    "cache"
]
